# talk

./: .gitignore  README.md  index.html  main.css  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: deploy.yml
250515-ppls/: index.html
250515-ppls/pymc/: pyproject.toml
250515-ppls/turing/: eightschools.jl
pymc/: main.py
src/: app.html
src/lib/: CodeExample.svelte  InfoBox.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/250515-ppls/: +page.svelte  AD.svelte  BadModel.svelte  ESCjl.svelte  ESCpymc.svelte  ESCstan.svelte  ESCstanpy.svelte  ManualAD.svelte  Sampler.svelte  Submodel.svelte  SubmodelNaive.svelte
src/routes/250708-regex/: +page.svelte  dfa.py  fa.py  nfa_backtrack.py  nfa_linear.py  nfa_thompson.py  simple.py
src/routes/250813-smc/: +page.svelte  Manifest.toml  Project.toml  particle_filter.jl  pmmh.jl  sir.jl
src/routes/260317-rand/: +page.svelte  Manifest.toml  crack.py  fp8.jl  lcg.jl  rand.py
src/routes/260317-rand/cpp/: Makefile  a.cpp  a.out
stan/: dynamic  dynamic.stan  eight_schools_centered  eight_schools_noncentered  eight_schools_noncentered.stan  main.py  pyproject.toml
static/: main.css
turing/: Manifest.toml  Project.toml  eightschools.jl  gps.jl
